force-app/main/default/objects/SmokeTestAuditLog__c/SmokeTestAuditLog__c.object-meta.xml
<!-- Data Classification: Confidential | Retention: 1 year minimum | Immutable: enforced by SmokeTestAuditLogTrigger (no UPDATE/DELETE) -->
<CustomObject>
    <description>Immutable audit trail for all significant system actions: test executions, configuration changes, rollback decisions, and alert dispatches. Satisfies SOC 2, SOX, and HIPAA audit logging requirements. Records cannot be updated or deleted (enforced via SmokeTestAuditLogTrigger). Data Classification: Confidential. Retention: 1 year minimum.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AUD-{000000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <indexes>
        <fullName>Timestamp_Index</fullName>
        <label>Timestamp Index</label>
        <fields>
            <name>Timestamp__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
    </indexes>
    <indexes>
        <fullName>Action_Index</fullName>
        <label>Action Index</label>
        <fields>
            <name>Action__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
    <indexes>
        <fullName>Actor_Index</fullName>
        <label>Actor Index</label>
        <fields>
            <name>Actor__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>