force-app/main/default/objects/SmokeTestAuditLog__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The type of action that produced this audit log entry. Restricted picklist to enforce consistent categorization.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution Started</fullName>
            </value>
            <value>
                <fullName>Execution Completed</fullName>
            </value>
            <value>
                <fullName>Execution Failed</fullName>
            </value>
            <value>
                <fullName>Config Changed</fullName>
            </value>
            <value>
                <fullName>Rollback Initiated</fullName>
            </value>
            <value>
                <fullName>Rollback Completed</fullName>
            </value>
            <value>
                <fullName>Rollback Failed</fullName>
            </value>
            <value>
                <fullName>Rollback Canceled</fullName>
            </value>
            <value>
                <fullName>Threshold Override</fullName>
            </value>
            <value>
                <fullName>Alert Sent</fullName>
            </value>
            <value>
                <fullName>Permission Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>