force-app/main/default/objects/SmokeTestAuditLog__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>Free-text action type validated against the AuditLogEntry allow-list at write time. Valid values: TEST_EXECUTION, CONFIGURATION_CHANGE, ROLLBACK_ACTION, ALERT_SENT, DASHBOARD_ACCESS. Complements the restricted Action__c picklist (WO-003) with an extensible string field for AuditLogWriter service integration.</description>
    <label>Action Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>