force-app/main/default/objects/SmokeTestAuditLog__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>The Salesforce User who performed the audited action. Required for compliance — every audit record must be attributable to a specific user. Indexed for actor-based queries.</description>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>AuditLogs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>