force-app/main/default/objects/SmokeTestAuditLog__c/fields/ActorUserId__c.field-meta.xml
<CustomField>
    <fullName>ActorUserId__c</fullName>
    <description>Salesforce User ID (18-char) of the actor who initiated the audited action. Stored as Text rather than a Lookup to support automated process contexts (batch jobs, queueables) that may run under service accounts not present as User records. AuditLogWriter defaults to UserInfo.getUserId() when null.</description>
    <label>Actor User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>