force-app/main/default/objects/SmokeTestAuditLog__c/fields/ChangeDetails__c.field-meta.xml
<CustomField>
    <fullName>ChangeDetails__c</fullName>
    <description>Structured JSON capturing before/after values for configuration changes, affected component lists for rollback actions, or full result summaries for execution events. 131072 characters to accommodate complete change detail payloads.</description>
    <label>Change Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>