force-app/main/default/objects/SmokeTestAuditLog__c/fields/ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>ChangeReason__c</fullName>
    <description>Human-readable justification for the change. Required (validated by AuditLogWriter) when ActionType__c is CONFIGURATION_CHANGE. Provides the "why" for compliance reviewers. Max 255 characters to encourage concise documentation.</description>
    <label>Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>