force-app/main/default/objects/SmokeTestAuditLog__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <description>Optional Lookup to the SmokeTestExecution__c record that triggered this audit event. Enables cross-object queries linking execution history to audit trail. Null for DASHBOARD_ACCESS and CONFIGURATION_CHANGE events not associated with a specific execution.</description>
    <label>Execution</label>
    <referenceTo>SmokeTestExecution__c</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>ExecutionAuditLogs</relationshipName>
    <type>Lookup</type>
</CustomField>