force-app/main/default/objects/SmokeTestAuditLog__c/fields/IPAddress__c.field-meta.xml
<CustomField>
    <fullName>IPAddress__c</fullName>
    <description>IP address of the client that initiated the action. Supports both IPv4 (max 15 chars) and IPv6 (max 45 chars) addresses.</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>