force-app/main/default/objects/SmokeTestAuditLog__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <description>Serialized before-value for CONFIGURATION_CHANGE and ROLLBACK_ACTION audit events. Stores JSON or plain text representation of the prior state. AuditLogWriter truncates to 32000 chars with [TRUNCATED] suffix to prevent DML exceptions. Confidential: FLS restricted to SmokeTest_Admin.</description>
    <label>Old Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>