force-app/main/default/objects/SmokeTestAuditLog__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Result of the audited action. Expected values: success, failure, partial, queued. Stored as free text to accommodate future action types without schema changes. Used by dashboard queries to filter failed actions for alert correlation.</description>
    <label>Outcome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>