force-app/main/default/objects/SmokeTestAuditLog__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>Correlation reference identifier linking this audit record to an external request (e.g., CI/CD pipeline run ID, webhook delivery ID, API referenceId returned in error responses).</description>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>