force-app/main/default/objects/SmokeTestAuditLog__c/fields/ResourceId__c.field-meta.xml
<CustomField>
    <fullName>ResourceId__c</fullName>
    <description>The Salesforce record ID or DeveloperName of the affected resource. Used to link audit records to specific executions, configurations, or deployments.</description>
    <label>Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>