force-app/main/default/objects/SmokeTestAuditLog__c/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <description>The type of Salesforce resource affected by the action (e.g., SmokeTestExecution__c, SmokeTestScenario__mdt, SmokeTestConfig__mdt, ConnectedApp).</description>
    <label>Resource Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>