force-app/main/default/objects/SmokeTestAuditLog__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>Salesforce session identifier for the action, enabling correlation with Salesforce platform audit logs. Stores a truncated/hashed session ID — never a live credential.</description>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>