force-app/main/default/objects/SmokeTestAuditLog__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>UTC timestamp when the audited action occurred. Required. Indexed for retention purge queries. May be set explicitly for migration scenarios; otherwise defaults to System.now() in AuditLogWriter.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>